fix header overflow

--- a/src/App.module.css
+++ b/src/App.module.css
@@ -1,5 +1,5 @@
 .header {
-  @apply h-[100px] bg-[#37445a] text-white flex items-center justify-between px-8 overflow-scroll
+  @apply h-[100px] bg-[#37445a] text-white flex items-center justify-between px-8 overflow-scroll sm:overflow-auto
 }
 
 .bars {
